# code-recall

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  CodeRecall_PRD.md  GITHUB_ISSUES.md  LICENSE.md  README.md  TESTING.md  challenge-boilerplate-template.js  challenge-generator-prompt.md  debounce-example.md  eslint.config.js  jest.config.cjs  package-lock.json  package.json  tsconfig.json
.husky/: pre-commit
coverage/: coverage-summary.json  formatters.ts.html  index.html  lcov.info  validators.ts.html
coverage/components/: App.tsx.html  index.html
coverage/components/commands/: AddCommand.tsx.html  ConfigCommand.tsx.html  ListCommand.tsx.html  ReviewCommand.tsx.html  StatsCommand.tsx.html  SyncCommand.tsx.html  index.html
coverage/lcov-report/: formatters.ts.html  index.html  validators.ts.html
coverage/lcov-report/components/: App.tsx.html  index.html
coverage/lcov-report/components/commands/: AddCommand.tsx.html  ConfigCommand.tsx.html  ListCommand.tsx.html  ReviewCommand.tsx.html  StatsCommand.tsx.html  SyncCommand.tsx.html  (+1 more)
coverage/lcov-report/utils/: formatters.ts.html  index.html  validators.ts.html
coverage/utils/: formatters.ts.html  index.html  validators.ts.html
scripts/: add_issues_to_project.sh  create_github_issues.py  create_github_issues.sh  create_github_issues_fixed.sh
src/: index.tsx  main.rs  tui.rs
src/__tests__/: setup.ts  types.test.ts
src/__tests__/utils/: formatters.test.ts  validators.test.ts
src/components/: App.tsx
src/components/commands/: AddCommand.tsx  ConfigCommand.tsx  ListCommand.tsx  ReviewCommand.tsx  StatsCommand.tsx  SyncCommand.tsx
src/types/: index.ts
src/utils/: formatters.ts  validators.ts
