[package]
name = "code-recall"
version = "0.1.0"
edition = "2021"
authors = ["CodeRecall Community"]
description = "A CLI tool for programming challenges and code practice"
license = "MIT"
repository = "https://github.com/your-username/code-recall"
keywords = ["cli", "programming", "challenges", "practice"]

[[bin]]
name = "code-recall"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
colored = "2.0"
indicatif = "0.17"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
color-eyre = "0.6.5"
crossterm = "0.29.0"

[dev-dependencies]
tempfile = "3.0"
